Add EKS module to Terraform configuration with outputs and variables
- Introduced EKS cluster module with IAM roles, policies, and managed node groups.
- Configured outputs for cluster details and kubectl access.
- Updated main Terraform files to include EKS settings and example variables.
- Enhanced README with usage instructions for the EKS module.

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -19,3 +19,13 @@ common_tags = {
   ManagedBy  = "terraform"
   Repository = "devops-platform-infra"
 }
+
+
+# EKS Configuration
+eks_cluster_version      = "1.28"
+eks_node_instance_types  = ["t3.medium"]
+eks_node_capacity_type   = "SPOT"  # Use SPOT instances for cost savings
+eks_node_disk_size      = 20
+eks_node_desired_size   = 2
+eks_node_max_size       = 4
+eks_node_min_size       = 1
