--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -23,9 +23,9 @@ common_tags = {
 
 # EKS Configuration
 eks_cluster_version      = "1.28"
-eks_node_instance_types  = ["t3.medium"]
-eks_node_capacity_type   = "SPOT"  # Use SPOT instances for cost savings
+eks_node_instance_types  = ["t3.small"]  # Use t3.small for Free Tier
+eks_node_capacity_type   = "ON_DEMAND"  # Change from SPOT to ON_DEMAND
 eks_node_disk_size      = 20
-eks_node_desired_size   = 2
-eks_node_max_size       = 4
+eks_node_desired_size   = 1  # Reduce to 1 node for Free Tier
+eks_node_max_size       = 2  # Reduce max size
 eks_node_min_size       = 1
