--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -23,7 +23,7 @@ common_tags = {
 
 # EKS Configuration
 eks_cluster_version      = "1.28"
-eks_node_instance_types  = ["t3.small"]  # Use t3.small for Free Tier
+eks_node_instance_types  = ["t3.medium"]  # Use t3.small for Free Tier
 eks_node_capacity_type   = "ON_DEMAND"  # Change from SPOT to ON_DEMAND
 eks_node_disk_size      = 20
 eks_node_desired_size   = 1  # Reduce to 1 node for Free Tier
