--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -23,8 +23,8 @@ common_tags = {
 
 # EKS Configuration
 eks_cluster_version      = "1.28"
-eks_node_instance_types  = ["t3.medium"]  # Use t3.small for Free Tier
-eks_node_capacity_type   = "ON_DEMAND"  # Change from SPOT to ON_DEMAND
+eks_node_instance_types = ["t3.small"]
+eks_node_capacity_type = "ON_DEMAND"
 eks_node_disk_size      = 30
 eks_node_desired_size   = 1  # Reduce to 1 node for Free Tier
 eks_node_max_size       = 2  # Reduce max size
