Update EKS node instance type and configuration for Free Tier compatibility
- Changed EKS node instance type from t3.small to m7i-flex.large.
- Reduced desired node size from 2 to 1 to align with Free Tier limits.

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -23,7 +23,7 @@ common_tags = {
 
 # EKS Configuration
 eks_cluster_version      = "1.28"
-eks_node_instance_types = ["t3.small"]
+eks_node_instance_types = ["m7i-flex.large"]
 eks_node_capacity_type = "ON_DEMAND"
 eks_node_disk_size      = 30
 eks_node_desired_size   = 1  # Reduce to 1 node for Free Tier
