Add MYSQL_USER environment variable to MySQL deployment configuration
- Added MYSQL_USER with value "root" to the MySQL container environment variables in the deployment.yaml file for the ski-station application.

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -87,6 +87,8 @@ spec:
         - containerPort: 3306
           name: mysql
         env:
+        - name: MYSQL_USER
+          value: "root"
         - name: MYSQL_ROOT_PASSWORD
           value: "rootpassword"
         - name: MYSQL_DATABASE
