Update MySQL credentials in deployment and configmap for ski-station application
- Changed MySQL username and password in configmap.yaml from "root" to "springuser" and "rootpassword" to "springpassword".
- Updated deployment.yaml to reflect the new MySQL user and password environment variables.

--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -12,8 +12,8 @@ data:
         name: ski-station-api
       datasource:
         url: jdbc:mysql://mysql-service:3306/gestionstationski?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-        username: root
-        password: rootpassword
+        username: springuser
+        password: springpassword
       jpa:
         hibernate:
           ddl-auto: update
