--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -87,12 +87,14 @@ spec:
         - containerPort: 3306
           name: mysql
         env:
-        - name: MYSQL_USER
-          value: "root"
         - name: MYSQL_ROOT_PASSWORD
           value: "rootpassword"
         - name: MYSQL_DATABASE
           value: "gestionstationski"
+        - name: MYSQL_USER
+          value: "springuser"  
+        - name: MYSQL_PASSWORD
+          value: "springpassword"          
         resources:
           requests:
             memory: "512Mi"
