--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -1,37 +1,43 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: ski-station-config
-  namespace: ski-station
-data:
-  application.yml: |
-    server:
-      port: 8080
-    spring:
-      application:
-        name: ski-station-api
-      datasource:
-        url: jdbc:mysql://mysql-service:3306/gestionstationski?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-        username: springuser
-        password: springpassword
-      jpa:
-        hibernate:
-          ddl-auto: update
-        properties:
-          hibernate:
-            dialect: org.hibernate.dialect.MySQL57Dialect
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: health,info,prometheus,metrics
-      endpoint:
-        health:
-          show-details: always
-      metrics:
-        export:
-          prometheus:
-            enabled: true
-    logging:
-      level:
-        tn.esprit.spring: INFO
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: ski-station-config
+#   namespace: ski-station
+# data:
+#   application.yml: |
+#     server:
+#       servlet:
+#         context-path: /api
+#       port: 8089
+#     spring:
+#       application:
+#         name: ski-station-api
+#       datasource:
+#         url: jdbc:mysql://mysql-service:3306/stationSki?createDatabaseIfNotExist=true
+#         username: springuser
+#         password: springpassword
+#       jpa:
+#         hibernate:
+#           ddl-auto: update
+#         show-sql: true
+#         properties:
+#           hibernate:
+#             dialect: org.hibernate.dialect.MySQLDialect
+#     management:
+#       endpoints:
+#         web:
+#           exposure:
+#             include: health,info,prometheus,metrics
+#       endpoint:
+#         health:
+#           show-details: always
+#       metrics:
+#         export:
+#           prometheus:
+#             enabled: true
+#     logging:
+#       level:
+#         tn.esprit.spring: INFO
+#         root: INFO
+#       pattern:
+#         console: "=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{45} - %msg %n"
