--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -31,3 +31,22 @@ spec:
     targetPort: 3306
     protocol: TCP
   type: ClusterIP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ski-station-frontend-service
+  namespace: ski-station
+  labels:
+    app: ski-station-frontend
+spec:
+  selector:
+    app: ski-station-frontend
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
+    protocol: TCP
+  type: ClusterIP
+
