Update ski-station ArgoCD configurations to allow flexibility in namespace management and clarify resource deployment settings

--- a/argocd/applications/ski-station-dev.yaml
+++ b/argocd/applications/ski-station-dev.yaml
@@ -20,8 +20,7 @@ spec:
     
   destination:
     server: https://kubernetes.default.svc
-    # ArgoCD will deploy resources to their specified namespaces
-    # (ski-station and monitoring based on the manifests)
+    namespace: ski-station  # Default namespace, but resources will go to their defined namespaces
     
   syncPolicy:
     automated:
