--- a/argocd/install/argocd-ingress.yaml
+++ b/argocd/install/argocd-ingress.yaml
@@ -23,7 +23,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /argocd
         pathType: Prefix
         backend:
           service:
